--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -182,10 +181,10 @@
                         <div class="col-xxl-8">
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
-                                <p class="lead fw-light mb-4">My name is Start Bootstrap and I help brands grow.</p>
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit dolorum itaque qui unde quisquam consequatur autem. Eveniet quasi nobis aliquid cumque officiis sed rem iure ipsa! Praesentium ratione atque dolorem?</p>
+                                <p class="lead fw-light mb-4">My name is Muhamad Hazim , a student in University of Malaya</p>
+                                <p class="text-muted">Dedicated my whole life into learning and using programming languages. Most well versed in Java and Python. Had tipped my toes into the world of video game and software development, mostly in RenPy and Java. I also tutor SPM students in Physics as a part-time job.</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
-                                    <a class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
+                                    <a class="text-gradient" href="https://www.linkedin.com/in/muhamad-hazim-bin-mohd-borkhan-7367652a6"><i class="bi bi-linkedin"></i></a>
                                     <a class="text-gradient" href="https://github.com/hazzyxz"><i class="bi bi-github"></i></a>
                                 </div>
                             </div>
