--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">My Personal Profile</span></a>
+                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">My Portfolio</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
@@ -46,10 +46,12 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Project Name 1</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <h2 class="fw-bolder">DarkBoundRPG</h2>
+                                            <p>A turn-based RPG combat game project made for my university course. Choose your class and dive into the dark-bounded city of Kuala Lumpur, traverse through multiple LRT stations lurking with unique enemies and encounters. Level up your character, gain new skills and defeat the evil nestled within the heart of the city</p>
+                                            <p>itch.io: <a href="https://hazzyxz.itch.io/darkboundrpg">DarkBoundRPG</a><br>GitHub: <a href="https://github.com/hazzyxz/darkbound-rpg">darkbound-rpg</a></p>
+                                            <p></p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets/DBRPG-1.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
