--- a/projects.html
+++ b/projects.html
@@ -60,10 +60,22 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Project Name 2</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <h2 class="fw-bolder">Dermanation</h2>
+                                            <p>An Android application built to support Sustainable Development Goal 1 (No Poverty) by enabling users to donate to NGOs, register as beneficiaries, and participate in volunteering opportunities.</p>
+                                            <p>
+                                                Features:
+                                                <br>
+                                                - User Authentication (Sign Up & Login)<br>
+                                                - Profile Customization<br>
+                                                - Donate to registered NGOs<br>
+                                                - Register as a Beneficiary<br>
+                                                - Volunteer Activity Listings<br>
+                                                - Real-time Firebase Integration<br>
+                                                - Reports Submission System<br>
+                                                - 24/7 Live Support
+                                            </p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets/Dermanation.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
